--- a/dart_edition/android/app/src/main/AndroidManifest.xml
+++ b/dart_edition/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="dart_edition"
+        android:label="物語Assistant"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
