--- a/dart_edition/macos/Runner/DebugProfile.entitlements
+++ b/dart_edition/macos/Runner/DebugProfile.entitlements
@@ -8,5 +8,10 @@
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
+	<!-- 添加文件訪問權限 -->
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 </dict>
 </plist>
