--- a/dart_edition/macos/Runner/Release.entitlements
+++ b/dart_edition/macos/Runner/Release.entitlements
@@ -4,5 +4,10 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<!-- 添加文件訪問權限 -->
+	<key>com.apple.security.files.user-selected.read-write</key>
+	<true/>
+	<key>com.apple.security.files.downloads.read-write</key>
+	<true/>
 </dict>
 </plist>
